force-app/main/default/objects/abd_Keg_Booklet__c/abd_Keg_Booklet__c.object-meta.xml
<CustomObject>
    <label>Keg Booklet</label>
    <nameField>
        <label>Booklet Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Keg Booklets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>