force-app/main/default/objects/abd_Keg_Booklet__c/fields/abd_Comments__c.field-meta.xml
<CustomField>
    <fullName>abd_Comments__c</fullName>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>