force-app/main/default/objects/abd_Keg_Booklet__c/fields/abd_Keg_Stickers__c.field-meta.xml
<CustomField>
    <fullName>abd_Keg_Stickers__c</fullName>
    <formula>MID(Name,1,7) &amp;  BR() &amp; /* Sticker #1 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+1), 6, "0") &amp; BR() &amp; /* Sticker #2 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+2), 6, "0") &amp; BR() &amp; /* Sticker #3 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+3), 6, "0") &amp; BR() &amp; /* Sticker #4 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+4), 6, "0") &amp; BR() &amp; /* Sticker #5 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+5), 6, "0") &amp; BR() &amp; /* Sticker #6 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+6), 6, "0") &amp; BR() &amp; /* Sticker #7 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+7), 6, "0") &amp; BR() &amp; /* Sticker #8 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+8), 6, "0") &amp; BR() &amp; /* Sticker #9 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+9), 6, "0") &amp; BR() &amp; /* Sticker #10 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+10), 6, "0") &amp; BR() &amp; /* Sticker #11 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+11), 6, "0") &amp; BR() &amp; /* Sticker #12 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+12), 6, "0") &amp; BR() &amp; /* Sticker #13 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+13), 6, "0") &amp; BR() &amp; /* Sticker #14 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+14), 6, "0") &amp; BR() &amp; /* Sticker #15 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+15), 6, "0") &amp; BR() &amp; /* Sticker #16 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+16), 6, "0") &amp; BR() &amp; /* Sticker #17 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+17), 6, "0") &amp; BR() &amp; /* Sticker #18 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+18), 6, "0") &amp; BR() &amp; /* Sticker #19 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+19), 6, "0") &amp; BR() &amp; /* Sticker #20 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+20), 6, "0") &amp; BR() &amp; /* Sticker #21 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+21), 6, "0") &amp; BR() &amp; /* Sticker #22 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+21), 6, "0") &amp; BR() &amp; /* Sticker #23 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+23), 6, "0") &amp; BR() &amp; /* Sticker #24 */
MID(Name,1,1) &amp;  LPAD(TEXT(VALUE(MID(Name,2,6))+24), 6, "0") &amp; BR()  /* Sticker #25 */</formula>
    <label>Keg Stickers</label>
    <type>Text</type>
</CustomField>