force-app/main/default/objects/abd_Keg_Booklet__c/fields/abd_Keg_Stickers_text__c.field-meta.xml
<CustomField>
    <fullName>abd_Keg_Stickers_text__c</fullName>
    <label>Keg Stickers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>