force-app/main/default/objects/abd_Keg_Booklet__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Keg Booklets</relationshipLabel>
    <relationshipName>Keg_Booklets</relationshipName>
    <type>Lookup</type>
</CustomField>