force-app/main/default/objects/abd_Keg_Booklet__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>MUSW__License2__c</referenceTo>
    <relationshipLabel>Keg Booklets</relationshipLabel>
    <relationshipName>Keg_Booklets</relationshipName>
    <type>Lookup</type>
</CustomField>